# PbrRenderer

./: .clangd  .gitignore  CMakeLists.txt  imgui.ini
inc/stb/: stb_image.h
shaders/: basic.frag  basic.vert
src/: camera.h  demo.cpp  model.h  pch.cpp  pch.h  platform.cpp  platform.h
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_widgets.cpp
src/renderer/: renderer.cpp  renderer.h
